Updated page loading to fix flickers in style changes

--- a/kanban.css
+++ b/kanban.css
@@ -21,10 +21,6 @@ html, body{
 	*/
 }
 
-
-body{
-	display: none;
-}
 .subproject {
 	margin-left: 20px;
 }
@@ -134,7 +130,19 @@ div.notecontainer {
 	top: 0px;
 	width: 100%;
 	height: 100%;
+	opacity: 0;
+    
+    -webkit-transition: opacity .2s ease-in;
+       -moz-transition: opacity .2s ease-in;
+        -ms-transition: opacity .2s ease-in;
+         -o-transition: opacity .2s ease-in;
+            transition: opacity .2s ease-in;
 }
+
+.realcontentcontainer.load {
+    opacity: 1;
+}
+
 .loadingdiv{
  	position:absolute; 
  	top: 6px;
